Fixed navbar on responsive screens

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </nav>
     </header>
 
-    <section class="challenge-container blue-container">
+    <section class="challenge-container blue-container" id="joinwaitlist">
       <div class="challenge-content">
         <div class="challenge-title">Challenge Anyone With Us</div>
         <span class="challenge-subtitle">
@@ -186,7 +186,9 @@
           </div>
         </div>
         <span class="title"> Be the First to Know When Tagbet Launches </span>
-        <input type="button" value="Join Our waitlist" class="waitlist" />
+        <button class="waitlist">
+          <a href="#joinwaitlist">Join Our waitlist</a>
+        </button>
       </div>
     </section>
 
@@ -194,7 +196,7 @@
       <div class="footer-container">
         <div class="logo">Tagbet</div>
         <div class="social-media">
-          <img src="./assets//img/facebook.svg" alt="" />
+          <img src="./assets//img/facebook.svg" alt="" class="social-img" />
           <img src="./assets//img/twitter.svg" alt="" />
           <img src="./assets//img/instagram.svg" alt="" />
         </div>
